force-app/main/default/objects/Worklog__c/Worklog__c.object-meta.xml
<CustomObject>
    <label>Worklog</label>
    <nameField>
        <label>Worklogs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Worklogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>