force-app/main/default/objects/Worklog__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <label>case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Worklogs</relationshipLabel>
    <relationshipName>Worklogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>