force-app/main/default/objects/Worklog__c/fields/Total_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Spent__c</fullName>
    <formula>IF (
ISBLANK(Time_Spent__c),
NULL,
TEXT(FLOOR(Time_Spent__c / 60 / 60)) &amp; &quot;:&quot; &amp;
LPAD(TEXT(FLOOR(MOD(Time_Spent__c / 60, 60))), 2, &quot;0&quot;) &amp; &quot;:&quot; &amp;
LPAD(TEXT(FLOOR(MOD(Time_Spent__c, 60))), 2, &quot;0&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time Spent</label>
    <type>Text</type>
</CustomField>