force-app/main/default/objects/Worklog__c/fields/Worklog_Id__c.field-meta.xml
<CustomField>
    <fullName>Worklog_Id__c</fullName>
    <label>Worklog Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>